--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,39 +1,64 @@
-.App {
-  text-align: center;
+*{
+  background-color: #B0CFDE;
+}
+h1{
+  font-family: Gilroy, sans-serif;
+  background-color: inherit;
+}
+h2,h3,h4,h5,p {
+  font-family: Graphik, sans-serif;
+  background-color: inherit;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h2{
+  font-size: 50px;
+  
+}
+h4{
+  font-size:4px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 50%;
+.citie {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  padding-bottom:10px;
+  flex-wrap: wrap;
+  padding: 0 1rem;
+  background-color: #B0CFDE;
+}
+.b1 {
+  display: flex;
+  justify-content: center;
+  padding: 0 2rem;
+  background-color: whitesmoke;
+  border-radius: 12px;
+  margin-top: 50px;
+  margin: 30px auto;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-.App-link {
-  color: #61dafb;
+.b1::after{
+  content: "";
+  border-radius: 5px;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.b1:hover {
+  -webkit-transform: scale(1.25, 1.25);
+  transform: scale(1.25, 1.25);
+}
+
+.b1:hover::after{
+  opacity: 1;
 }
